Changed building uris from string fragments to building with file/path/uri